[workspace]
members = ["ungame", "tools/ghost_radio", "uncore", "ungear", "unstd"]
resolver = "2"

[workspace.package]
version = "0.2.5-dev"
edition = "2021"
description = "2D isometric Game about investigating paranormal hauntings"
repository = "https://github.com/deavid/unhaunter/"
license = "Apache-2.0"
authors = ["David Martínez Martí <deavidsedice@gmail.com>"]

[workspace.dependencies]
rand = { version = "0.8", features = ["small_rng"] }
enum-iterator = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
regex = "1.7"
clap = "4.4"
fastapprox = "0.3"
anyhow = "1.0"
thiserror = "2.0"
ordered-float = { version = "4.2", features = ["serde"] }
hierarchical_pathfinding = "0.5"
walkdir = "2.5"
glob = "0.3"
tiled = { version = "0.13", features = ["wasm"] }
wasm-bindgen = "0.2"
normalize-path = "0.2"
itertools = "0.14.0"

bevy = "0.15"
bevy-persistent = { version = "0.7", features = ["all"] }
bevy_framepace = "0.18"
bevy_dylib = "0.15"

[package]
name = "unhaunter"
default-run = "unhaunter_game"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ungame = { path = "ungame" }
wasm-bindgen = { workspace = true }
bevy = { workspace = true }

[[bin]]
name = "unhaunter_game"
path = "src/bin/unhaunter.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = { workspace = true }

[profile.dev]
opt-level = "z"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = "z"
debug = false
strip = "debuginfo"

# These optimizations for release are trying to target mostly WASM
[profile.release]
opt-level = "s"
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
