[workspace]
members = [
    "ungame",
    "tools/ghost_radio",
    "uncore",
    "ungear",
    "unstd",
    "ungearitems",
    "unmaphub",
    "untruck",
    "unplayer",
    "unghost",
    "unmenu",
    "unlight",
    "unnpc",
    "untmxmap",
    "unsettings",
    "unmenusettings",
    "unfog",
]
resolver = "2"

[workspace.package]
version = "0.2.6-dev"
edition = "2021"
description = "2D isometric Game about investigating paranormal hauntings"
repository = "https://github.com/deavid/unhaunter/"
license = "Apache-2.0"
authors = ["David Martínez Martí <deavidsedice@gmail.com>"]

[workspace.dependencies]
rand = { version = "0.9", features = ["small_rng"] }
enum-iterator = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
image = "0.25"
regex = "1.7"
clap = "4.5"
fastapprox = "0.3"
anyhow = "1.0"
thiserror = "2.0"
ordered-float = { version = "4.2", features = ["serde"] }
hierarchical_pathfinding = "0.5"
walkdir = "2.5"
glob = "0.3"
tiled = { version = "0.13", features = ["wasm"] }
wasm-bindgen = "0.2"
normalize-path = "0.2"
itertools = "0.14.0"
dirs = "6.0"
strum = { version = "0.27", features = ["derive"] }

bevy = "0.15"
bevy-persistent = { version = "0.7", features = ["all"] }
bevy_framepace = "0.18"
bevy_dylib = "0.15"

[package]
name = "unhaunter"
default-run = "unhaunter_game"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uncore = { path = "uncore" }
unstd = { path = "unstd" }
unfog = { path = "unfog" }
ungear = { path = "ungear" }
ungearitems = { path = "ungearitems" }
unmaphub = { path = "unmaphub" }
untruck = { path = "untruck" }
ungame = { path = "ungame" }
unplayer = { path = "unplayer" }
unghost = { path = "unghost" }
unlight = { path = "unlight" }
unmenu = { path = "unmenu" }
unnpc = { path = "unnpc" }
untmxmap = { path = "untmxmap" }
unsettings = { path = "unsettings" }
unmenusettings = { path = "unmenusettings" }

wasm-bindgen = { workspace = true }
bevy = { workspace = true }

[build-dependencies]
walkdir = { workspace = true }

[[bin]]
name = "unhaunter_game"
path = "unhaunter/src/bin/unhaunter.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "unhaunter/src/lib.rs"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = { workspace = true }

[profile.dev]
opt-level = "z"
lto = "off"
codegen-units = 8

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = "z"
debug = false
strip = "debuginfo"

# These optimizations for release are trying to target mostly WASM
[profile.release]
opt-level = "s"
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
