[package]
name = "uncore"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
enum-iterator = { workspace = true }
thiserror = { workspace = true }
fastapprox = { workspace = true }
rand = { workspace = true }
tiled = { workspace = true }
anyhow = { workspace = true }
ordered-float = { workspace = true }
itertools = { workspace = true }
