[package]
name = "uncoremenu"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
uncore = { path = "../uncore" }
unprofile = { path = "../unprofile" }

bevy = { workspace = true }
bevy_picking = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
