# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ungame"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uncore = { path = "../uncore" }
unstd = { path = "../unstd" }
ungear = { path = "../ungear" }
ungearitems = { path = "../ungearitems" }
unsettings = { path = "../unsettings" }

bevy = { workspace = true }
rand = { workspace = true }
ordered-float = { workspace = true }
bevy-persistent = { workspace = true }
ndarray = { workspace = true }
