[package]
name = "ungearitems"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uncore = { path = "../uncore" }
ungear = { path = "../ungear" }

bevy = { workspace = true }
bevy_platform = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
enum-iterator = { workspace = true }
fastapprox = { workspace = true }
