[package]
name = "unplayer"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
uncore = { path = "../uncore" }
unstd = { path = "../unstd" }
ungear = { path = "../ungear" }
unsettings = { path = "../unsettings" }
unprofile = { path = "../unprofile" }

bevy = { workspace = true }
bevy_picking = { workspace = true }
bevy_platform = { workspace = true }
bevy-persistent = { workspace = true }
rand = { workspace = true }
fastapprox = { workspace = true }
ordered-float = { workspace = true }
ndarray = { workspace = true }
