[package]
name = "unsettings"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
bevy-persistent = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
enum-iterator = { workspace = true }
dirs = { workspace = true }
