[package]
name = "untmxmap"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uncore = { path = "../uncore" }
unstd = { path = "../unstd" }

bevy = { workspace = true }
normalize-path = { workspace = true }
tiled = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
