[package]
name = "unwalkie"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uncore = { path = "../uncore" }
ungear = { path = "../ungear" }
ungearitems = { path = "../ungearitems" }
unsettings = { path = "../unsettings" }
unwalkie_types = { path = "../unwalkie_types" }
unwalkiecore = { path = "../unwalkiecore" }

bevy = { workspace = true }
rand = { workspace = true }
bevy-persistent = { workspace = true }
