[package]
name = "unwalkie_types"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true }
