[package]
name = "walkie_voice_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
unwalkie_types = { path = "../../../unwalkie_types" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
